[package]
name = "is-thirteen-with-wasm"
version = "0.1.3"
authors = ["Erin Moore <erinmoorethefirst@gmail.com>"]
description = "find out if it's 13"
license = "MIT"
repository = "https://github.com/ErinLMoore/is-thirteen-with-wasm"
keywords = ["wasm", "rust", "cool", "13", "thirteen"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
