[package]
name = "is-thirteen-with-wasm"
version = "0.2.4"
authors = ["Erin Moore <erinmoorethefirst@gmail.com>"]
description = "find out if it's 13"
license = "MIT"
repository = "https://github.com/ErinLMoore/is-thirteen-with-wasm"
keywords = ["wasm", "rust", "cool", "13", "thirteen"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2"
